k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app
        image: niranjandockerhub/go-web-app:latest 
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
