k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
spec:
  type: NodePort 
  selector:
    app: go-app
  ports:
    - protocol: TCP
      port: 8080         # Port accessible within the cluster
      targetPort: 8080   # Port on the container
      nodePort: 30000    # Exposed NodePort on the cluster
